<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#80000000"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/exo_rew"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_rew"
            android:contentDescription="@string/rewind" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/exo_play"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/play" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/exo_pause"
            android:src="@drawable/ic_pause"
            android:contentDescription="@string/pause" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/exo_ffwd"
            android:src="@drawable/ic_ffd"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/forward" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exo_position"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textColor="#CBCDC8"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/exo_duration"
                android:textColor="#CBCDC8"/>
        </LinearLayout>

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exo_progress"
            android:layout_marginTop="-8dp"
            app:unplayed_color="#45424E"
            app:buffered_color="#95989F"
            app:played_color="#FF0000"/>
    </LinearLayout>
</RelativeLayout>